# bevy_snake

./: Cargo.toml
src/: components.rs  events.rs  main.rs  resources.rs
src/states/: app_state.rs  game_state.rs
