[package]
name = "bevy_snake"
version = "0.1.0"
authors = ["KirmesBude <kirmesbude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git="https://github.com/DJMcNab/bevy", branch="state_cleanup"}
rand = "0.7.3"